testsuite/tests/typing-layouts-products/unboxed_records_stable.compilers.reference
File "unboxed_records.ml", line 54, characters 0-34:
54 | type ints = #{ x : int ; y : int }
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This construct requires the beta version of the extension "layouts", which is disabled and cannot be used
